--- a/FariaPersonalizados_WebSite/FariaPersonalizados_WebSite/FariaPersonalizados_WebSite.csproj
+++ b/FariaPersonalizados_WebSite/FariaPersonalizados_WebSite/FariaPersonalizados_WebSite.csproj
@@ -334,11 +334,13 @@
     <Content Include="assets\local\estilos.css" />
     <Content Include="assets\local\scripts.js" />
     <Content Include="index.aspx" />
+    <Content Include="Services\Slides.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoDados.cs" />
     <Compile Include="Classes\Slide.cs" />
+    <Compile Include="Classes\Util.cs" />
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -347,6 +349,10 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Slides.asmx.cs">
+      <DependentUpon>Slides.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
